<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_cat_terminal">
        <ListPreference
            android:key="font_size"
            android:title="@string/pref_font_size"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_values"
            android:defaultValue="13.0"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:key="line_spacing"
            android:title="@string/pref_line_spacing"
            android:entries="@array/line_spacing_entries"
            android:entryValues="@array/line_spacing_values"
            android:defaultValue="1.0"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:key="terminal_theme"
            android:title="@string/pref_terminal_theme"
            android:entries="@array/terminal_theme_entries"
            android:entryValues="@array/terminal_theme_values"
            android:defaultValue="dark"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:key="cursor_style"
            android:title="@string/pref_cursor_style"
            android:entries="@array/cursor_style_entries"
            android:entryValues="@array/cursor_style_values"
            android:defaultValue="block"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:key="cursor_blink"
            android:title="@string/pref_cursor_blink"
            android:defaultValue="true" />
        <ListPreference
            android:key="scrollback_lines"
            android:title="@string/pref_scrollback"
            android:entries="@array/scrollback_entries"
            android:entryValues="@array/scrollback_values"
            android:defaultValue="5000"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:key="keep_awake"
            android:title="@string/pref_keep_awake"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_app">
        <ListPreference
            android:key="app_theme"
            android:title="@string/pref_app_theme"
            android:entries="@array/app_theme_entries"
            android:entryValues="@array/app_theme_values"
            android:defaultValue="system"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:key="haptics"
            android:title="@string/pref_haptics"
            android:defaultValue="true" />
        <ListPreference
            android:key="bell"
            android:title="@string/pref_bell"
            android:entries="@array/bell_entries"
            android:entryValues="@array/bell_values"
            android:defaultValue="vibrate"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:key="osc52_clipboard"
            android:title="@string/pref_osc52"
            android:defaultValue="true" />
        <ListPreference
            android:key="paste_confirm_lines"
            android:title="@string/pref_paste_confirm"
            android:entries="@array/paste_confirm_entries"
            android:entryValues="@array/paste_confirm_values"
            android:defaultValue="3"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:key="command_bar"
            android:title="@string/pref_command_bar"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_keys">
        <EditTextPreference
            android:key="extra_keys_row1"
            android:title="@string/pref_keys_row1"
            android:defaultValue="ESC CTRL ALT TAB UP DOWN LEFT RIGHT HOME END PGUP PGDN INS DEL"
            android:dialogMessage="@string/pref_keys_help"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:key="extra_keys_row2"
            android:title="@string/pref_keys_row2"
            android:defaultValue="-|_ /|\\ ~|` ||&amp; :|; &quot;|' [|{ ]|} (|) &lt;|&gt; =|+ *|# $|@ ?|! ,|."
            android:dialogMessage="@string/pref_keys_help"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:key="extra_keys_row3"
            android:title="@string/pref_keys_row3"
            android:defaultValue="F1 F2 F3 F4 F5 F6 F7 F8 F9 F10 F11 F12"
            android:dialogMessage="@string/pref_keys_help"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:key="command_shortcuts"
            android:title="@string/pref_commands"
            android:dialogMessage="@string/pref_commands_help" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_notifications">
        <SwitchPreferenceCompat
            android:key="notify_agent_offline"
            android:title="@string/pref_notify_offline"
            android:defaultValue="true" />
        <SwitchPreferenceCompat
            android:key="notify_exit"
            android:title="@string/pref_notify_exit"
            android:defaultValue="true" />
        <SwitchPreferenceCompat
            android:key="notify_bell"
            android:title="@string/pref_notify_bell"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_account">
        <Preference android:key="pref_relay" android:title="@string/pref_relay" android:selectable="false" />
        <Preference android:key="pref_device_id" android:title="@string/pref_device_id" android:selectable="false" />
        <Preference android:key="pref_devices" android:title="@string/pref_devices" />
        <Preference android:key="pref_unpair" android:title="@string/pref_unpair" />
        <Preference android:key="pref_about" android:title="@string/app_name" android:selectable="false" />
    </PreferenceCategory>
</PreferenceScreen>
